[package]
name = "hdb"
version = "0.1.0"
authors = ["Justin Guidroz <justin.guidroz@gmail.com>"]

[features]
with-openssl = ["openssl"]
with-uuid = ["postgres-shared/with-uuid"]
with-chrono = ["postgres-shared/with-chrono"]

[dependencies]
openssl = { version = "0.9", optional = true }
postgres = { version = "0.15", features = ["with-openssl", "with-uuid", "with-chrono"] }
postgres-shared = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
r2d2 = "0.8"
r2d2_postgres = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = {version = "0.5", features = ["serde", "v4"] }
